<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">scorekeeper</string>
    <string name="edit_players">Edit Players</string>
    <string name="title_activity_enter_players">EnterPlayers</string>
    <string name="action_settings">Settings</string>
    <string name="player_0">Player1</string>
    <string name="player_1">Player2</string>
    <string name="player_2">Player3</string>
    <string name="player_3">Player4</string>
    <string name="done">"Done/Save"</string>
    <string name="save">"Save"</string>
    <string name="undo">"Undo"</string>
    <string name="select_course">"Select/Save Course"</string>
    <string name="start_match">"Score Card"</string>
    <string name="title_activity_select_course">SelectCourse</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scoring">Scoring</string>
    <string name="filler_line"> --------------------------------------------------</string>
    <string name="hole19_line">|  1 |  2 |  3 |  4 |  5 |  6 |  7 |  8 |  9 | Out |</string>
    <string name="score_line">|  0 |  0 |  0 |  0 |  0 |  0 |  0 |  0 |  0 |   0 |</string>
    <string name="hole918_line">| 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | Out |</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="title_activity_enter_score">EnterScore</string>
    <string name="strokes">Total Strokes</string>
    <string name="title_activity_enter_score2">EnterScore2</string>
    <string name="nexthole">NextHole</string>
    <string name="prevhole">PrevHole</string>
    <string name="title_activity_enter_all_scores">EnterAllScores</string>
    <string name="title_activity_edit_course">EditCourse</string>
    <string name="reset">ResetScores</string>
    <string name="current_courses">Current Courses Available</string>
    <string name="distance_in">Distance In</string>
    <string name="driving_distance">Driving Distance</string>
    <string name="next_player">Next Player</string>
    
</resources>
