<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scorekeeper.EnterPlayers" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText0"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:text="@string/player_0" />

        <Spinner
            android:id="@+id/aeas_sp_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:ems="10"
            android:text="@string/player_1" />

        <Spinner
            android:id="@+id/aeas_sp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:ems="10"
            android:text="@string/player_2" />

        <Spinner
            android:id="@+id/aeas_sp_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
          
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:ems="10"
            android:text="@string/player_3" />

        <Spinner
            android:id="@+id/aeas_sp_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/aeas_b_prevhole"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:background="@android:color/holo_red_dark"
            android:onClick="decr_current_hole"
            android:text="@string/prevhole"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/aeas_b_nexthole"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:background="@android:color/darker_gray"
            android:onClick="incr_current_hole"
            android:text="@string/nexthole"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/aeas_b_current_hole"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/prevhole"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/aeas_b_save"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:onClick="ui_save_and_store_scores"
            android:text="@string/save"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/aeas_b_undo"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:onClick="ui_void_scores"
            android:text="@string/undo"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/aeas_b_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:onClick="Done"
        android:text="@string/done" />
        
 </LinearLayout>
