<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scorekeeper.EnterPlayers" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText0"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:ems="10"
            android:text="@string/player_0" />
        
        <EditText
            android:id="@+id/editText0"
            android:layout_height="wrap_content"
            android:layout_weight="85.19"
            android:ems="10"
            android:text="@string/player_0"
            android:layout_width="0dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:ems="10"
            android:text="@string/player_1" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:ems="10"
            android:text="@string/player_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:ems="10"
            android:text="@string/player_2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:ems="10"
            android:text="@string/player_2" />
          
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fixedText3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:ems="10"
            android:text="@string/player_3" />
    
        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:ems="10"
            android:text="@string/player_3" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:onClick="Done"
        android:text="@string/done" />
        
 </LinearLayout>